--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,11 @@
-app:
-    resource: "@AppBundle/Controller/"
+front:
+    resource: "@FrontBundle/Controller/"
     type:     annotation
+    prefix:   /
+
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
+
+
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
