--- a/src/FrontBundle/Resources/config/services.yml
+++ b/src/FrontBundle/Resources/config/services.yml
@@ -1,5 +1,15 @@
+#danvbe/UserBundle/Resources/services.yml
+parameters:
+    my_user_provider.class: FrontBundle\Service\FOSUBUserProvider
+
+
 services:
     app.form.registration:
         class: FrontBundle\Form\UserType
         tags:
             - { name: form.type, alias: app_user_registration }
+
+    my_user_provider:
+        class: "%my_user_provider.class%"
+        #this is the place where the properties are passed to the UserProvider - see config.yml
+        arguments: [@fos_user.user_manager,{facebook: facebook_id, google: google_id}]
