--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -88,7 +88,7 @@ fos_user:
     user_class: FrontBundle\Entity\User
     registration:
         form:
-            type: FrontBundle\Form\UserType
+            type: app_user_registration
 
 guzzle:
     clients:
@@ -96,3 +96,33 @@ guzzle:
             base_url: "https://microsoft-apiapp8e4c01653956482183a83076bcb4e9f9.azurewebsites.net/api/trajet"
             headers:
                 Accept: "application/json"
+
+
+hwi_oauth:
+    #this is my custom user provider, created from FOSUBUserProvider - will manage the
+    #automatic user registration on your site, with data from the provider (facebook. google, etc.)
+    #and also, the connecting part (get the token and the user_id)
+    connect:
+        account_connector: my_user_provider
+    # name of the firewall in which this bundle is active, this setting MUST be set
+    firewall_names: [main]
+    fosub:
+        username_iterations: 30
+        properties:
+            # these properties will be used/redefined later in the custom FOSUBUserProvider service.
+            facebook: facebook_id
+    resource_owners:
+        facebook:
+            type:                facebook
+            client_id:           "1740802876167332"
+            client_secret:       "e96e102eed1d8e83e72975e9f5008c85"
+            scope:               "public_profile,email"
+            infos_url: "https://graph.facebook.com/me?fields=id,name,email,picture.type(square)"
+            paths:
+                email: email
+
+        google:
+            type:           google
+            client_id:          "719977693307-3jj6bte1mcmfit6bugpdfc429qrh4ub3.apps.googleusercontent.com"
+            client_secret:      "jrCax79ZjBJMn47ms2cjGfrG"
+            scope:               "https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile"
