--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,6 +6,21 @@ front:
 fos_js_routing:
     resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
 
-
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
+
+#HWIOAuthBundle routes
+hwi_oauth_login:
+    resource: "@HWIOAuthBundle/Resources/config/routing/login.xml"
+    prefix:   /login
+
+hwi_oauth_redirect:
+    resource: "@HWIOAuthBundle/Resources/config/routing/redirect.xml"
+    prefix:   /connect
+
+facebook_login:
+    pattern: /login/check-facebook
+
+google_login:
+    pattern: /login/check-google
