--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -22,8 +22,18 @@ security:
             pattern: ^/
             form_login:
                 provider: fos_userbundle
-                #csrf_token_generator: security.csrf.token_manager
                 csrf_provider: form.csrf_provider
+            oauth:
+                resource_owners:
+                    facebook:           "/login/check-facebook"
+                    google:             "/login/check-google"
+                login_path:        /login
+                failure_path:      /login
+
+                oauth_user_provider:
+                                    #this is my custom user provider, created from FOSUBUserProvider - will manage the
+                                    #automatic user registration on your site, with data from the provider (facebook. google, etc.)
+                    service: my_user_provider
 
             logout:       true
             anonymous:    true
